<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="false"
    android:clickable="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:orientation="horizontal"
        android:id="@+id/info">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            style="@style/PerfTextSmall"
            android:id="@+id/cpu_info_title"
            android:text="@string/cpu_label"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            style="@style/PerfTextSmall"
            android:id="@+id/cpu_info"
            android:text="@string/cpu_info_default"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            style="@style/PerfTextSmall"
            android:id="@+id/gpu_info_title"
            android:text="@string/gpu_label"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            style="@style/PerfTextSmall"
            android:id="@+id/gpu_info"
            android:text="@string/gpu_info_default"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            style="@style/PerfTextSmall"
            android:id="@+id/cpu0_title"
            android:text="@string/cpu0_label"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            style="@style/PerfTextSmall"
            android:id="@+id/cpu0_value"
            android:text="@string/cpu_default"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            style="@style/PerfTextSmall"
            android:id="@+id/cpu1_title"
            android:text="@string/cpu1_label"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            style="@style/PerfTextSmall"
            android:id="@+id/cpu1_value"
            android:text="@string/cpu_default"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:id="@+id/gpu_title"
            style="@style/PerfTextSmall"
            android:text="@string/gpu_label"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            style="@style/PerfTextSmall"
            android:id="@+id/gpu_value"
            android:text="@string/gpu_default"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:id="@+id/fps_title"
            style="@style/PerfTextSmall"
            android:text="@string/fps_label"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            style="@style/PerfTextSmall"
            android:id="@+id/fps_value"
            android:text="@string/fps_default"/>

    </LinearLayout>


</LinearLayout>